UI improvements to MsgViewer
git-svn-id: svn+ssh://cdcvs.fnal.gov/cvs/projects/messagefacility-svn/trunk@112 e83639c7-b27d-0410-b729-efaafefb1b97

--- a/Extensions/bin/msgviewerdlgui.ui
+++ b/Extensions/bin/msgviewerdlgui.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>765</width>
+    <width>680</width>
     <height>733</height>
    </rect>
   </property>
@@ -16,7 +16,7 @@
   <widget class="QPushButton" name="btnPause">
    <property name="geometry">
     <rect>
-     <x>630</x>
+     <x>540</x>
      <y>650</y>
      <width>121</width>
      <height>30</height>
@@ -29,7 +29,7 @@
   <widget class="QPushButton" name="btnExit">
    <property name="geometry">
     <rect>
-     <x>630</x>
+     <x>540</x>
      <y>690</y>
      <width>121</width>
      <height>30</height>
@@ -47,9 +47,14 @@
     <rect>
      <x>10</x>
      <y>10</y>
-     <width>471</width>
-     <height>691</height>
+     <width>380</width>
+     <height>690</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Courier 10 Pitch</family>
+    </font>
    </property>
    <property name="verticalScrollBarPolicy">
     <enum>Qt::ScrollBarAsNeeded</enum>
@@ -58,33 +63,12 @@
     <bool>true</bool>
    </property>
   </widget>
-  <widget class="QLabel" name="label_Partition">
-   <property name="geometry">
-    <rect>
-     <x>270</x>
-     <y>700</y>
-     <width>101</width>
-     <height>27</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>Sans Serif</family>
-     <pointsize>10</pointsize>
-     <weight>75</weight>
-     <bold>true</bold>
-    </font>
-   </property>
-   <property name="text">
-    <string>Partition</string>
-   </property>
-  </widget>
   <widget class="QPushButton" name="btnSwitchChannel">
    <property name="geometry">
     <rect>
-     <x>360</x>
+     <x>250</x>
      <y>700</y>
-     <width>121</width>
+     <width>140</width>
      <height>27</height>
     </rect>
    </property>
@@ -95,7 +79,7 @@
   <widget class="QLabel" name="label_6">
    <property name="geometry">
     <rect>
-     <x>490</x>
+     <x>400</x>
      <y>310</y>
      <width>51</width>
      <height>21</height>
@@ -105,8 +89,8 @@
     <font>
      <family>Sans Serif</family>
      <pointsize>10</pointsize>
-     <weight>75</weight>
-     <bold>true</bold>
+     <weight>50</weight>
+     <bold>false</bold>
     </font>
    </property>
    <property name="text">
@@ -116,7 +100,7 @@
   <widget class="QLabel" name="label_7">
    <property name="geometry">
     <rect>
-     <x>490</x>
+     <x>400</x>
      <y>520</y>
      <width>111</width>
      <height>21</height>
@@ -126,8 +110,8 @@
     <font>
      <family>Sans Serif</family>
      <pointsize>10</pointsize>
-     <weight>75</weight>
-     <bold>true</bold>
+     <weight>50</weight>
+     <bold>false</bold>
     </font>
    </property>
    <property name="text">
@@ -137,7 +121,7 @@
   <widget class="QLabel" name="label_8">
    <property name="geometry">
     <rect>
-     <x>490</x>
+     <x>400</x>
      <y>100</y>
      <width>101</width>
      <height>21</height>
@@ -147,8 +131,8 @@
     <font>
      <family>Sans Serif</family>
      <pointsize>10</pointsize>
-     <weight>75</weight>
-     <bold>true</bold>
+     <weight>50</weight>
+     <bold>false</bold>
     </font>
    </property>
    <property name="text">
@@ -158,7 +142,7 @@
   <widget class="QListWidget" name="lwCategory">
    <property name="geometry">
     <rect>
-     <x>490</x>
+     <x>400</x>
      <y>120</y>
      <width>121</width>
      <height>161</height>
@@ -168,7 +152,7 @@
   <widget class="QListWidget" name="lwHost">
    <property name="geometry">
     <rect>
-     <x>490</x>
+     <x>400</x>
      <y>330</y>
      <width>121</width>
      <height>161</height>
@@ -178,7 +162,7 @@
   <widget class="QListWidget" name="lwApplication">
    <property name="geometry">
     <rect>
-     <x>490</x>
+     <x>400</x>
      <y>540</y>
      <width>121</width>
      <height>161</height>
@@ -188,7 +172,7 @@
   <widget class="QPushButton" name="btnClearCat">
    <property name="geometry">
     <rect>
-     <x>490</x>
+     <x>400</x>
      <y>280</y>
      <width>121</width>
      <height>27</height>
@@ -201,7 +185,7 @@
   <widget class="QPushButton" name="btnClearHost">
    <property name="geometry">
     <rect>
-     <x>490</x>
+     <x>400</x>
      <y>490</y>
      <width>121</width>
      <height>27</height>
@@ -214,7 +198,7 @@
   <widget class="QPushButton" name="btnClearApp">
    <property name="geometry">
     <rect>
-     <x>490</x>
+     <x>400</x>
      <y>700</y>
      <width>121</width>
      <height>27</height>
@@ -227,7 +211,7 @@
   <widget class="QPushButton" name="btnFilter">
    <property name="geometry">
     <rect>
-     <x>490</x>
+     <x>400</x>
      <y>30</y>
      <width>121</width>
      <height>27</height>
@@ -240,7 +224,7 @@
   <widget class="QPushButton" name="btnReset">
    <property name="geometry">
     <rect>
-     <x>490</x>
+     <x>400</x>
      <y>60</y>
      <width>121</width>
      <height>27</height>
@@ -253,7 +237,7 @@
   <widget class="QLabel" name="label_9">
    <property name="geometry">
     <rect>
-     <x>490</x>
+     <x>400</x>
      <y>10</y>
      <width>121</width>
      <height>21</height>
@@ -263,8 +247,8 @@
     <font>
      <family>Sans Serif</family>
      <pointsize>10</pointsize>
-     <weight>75</weight>
-     <bold>true</bold>
+     <weight>50</weight>
+     <bold>false</bold>
     </font>
    </property>
    <property name="text">
@@ -276,7 +260,7 @@
     <rect>
      <x>10</x>
      <y>700</y>
-     <width>171</width>
+     <width>161</width>
      <height>27</height>
     </rect>
    </property>
@@ -284,8 +268,8 @@
     <font>
      <family>Sans Serif</family>
      <pointsize>10</pointsize>
-     <weight>75</weight>
-     <bold>true</bold>
+     <weight>50</weight>
+     <bold>false</bold>
     </font>
    </property>
    <property name="text">
@@ -295,9 +279,9 @@
   <widget class="QLCDNumber" name="lcdMsgs">
    <property name="geometry">
     <rect>
-     <x>190</x>
+     <x>170</x>
      <y>700</y>
-     <width>64</width>
+     <width>60</width>
      <height>27</height>
     </rect>
    </property>
@@ -317,8 +301,8 @@
   <widget class="QSlider" name="vsSeverity">
    <property name="geometry">
     <rect>
-     <x>630</x>
-     <y>50</y>
+     <x>550</x>
+     <y>30</y>
      <width>16</width>
      <height>141</height>
     </rect>
@@ -342,8 +326,8 @@
   <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
-     <x>660</x>
-     <y>130</y>
+     <x>580</x>
+     <y>110</y>
      <width>31</width>
      <height>16</height>
     </rect>
@@ -399,8 +383,8 @@
   <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
-     <x>660</x>
-     <y>170</y>
+     <x>580</x>
+     <y>150</y>
      <width>51</width>
      <height>21</height>
     </rect>
@@ -456,8 +440,8 @@
   <widget class="QLabel" name="label_5">
    <property name="geometry">
     <rect>
-     <x>660</x>
-     <y>40</y>
+     <x>580</x>
+     <y>20</y>
      <width>41</width>
      <height>41</height>
     </rect>
@@ -540,8 +524,8 @@
   <widget class="QLabel" name="label_4">
    <property name="geometry">
     <rect>
-     <x>660</x>
-     <y>90</y>
+     <x>580</x>
+     <y>70</y>
      <width>71</width>
      <height>21</height>
     </rect>
@@ -592,27 +576,6 @@
    </property>
    <property name="text">
     <string>Warning</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_10">
-   <property name="geometry">
-    <rect>
-     <x>630</x>
-     <y>10</y>
-     <width>71</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>Sans Serif</family>
-     <pointsize>10</pointsize>
-     <weight>75</weight>
-     <bold>true</bold>
-    </font>
-   </property>
-   <property name="text">
-    <string>Severity</string>
    </property>
   </widget>
  </widget>
