Fixed type in msgviewer GUI
git-svn-id: svn+ssh://cdcvs.fnal.gov/cvs/projects/messagefacility-svn/trunk@119 e83639c7-b27d-0410-b729-efaafefb1b97

--- a/Extensions/bin/msgviewerdlgui.ui
+++ b/Extensions/bin/msgviewerdlgui.ui
@@ -587,8 +587,17 @@
      <height>27</height>
     </rect>
    </property>
+   <property name="font">
+    <font>
+     <weight>50</weight>
+     <italic>false</italic>
+     <bold>false</bold>
+     <underline>false</underline>
+     <strikeout>false</strikeout>
+    </font>
+   </property>
    <property name="text">
-    <string>Speed Render</string>
+    <string>Speedy Mode</string>
    </property>
    <property name="checkable">
     <bool>true</bool>
