--- a/Extensions/bin/msgviewerdlgui.ui
+++ b/Extensions/bin/msgviewerdlgui.ui
@@ -606,6 +606,19 @@
     <bool>true</bool>
    </property>
   </widget>
+  <widget class="QCommandLinkButton" name="commandLinkButton">
+   <property name="geometry">
+    <rect>
+     <x>550</x>
+     <y>190</y>
+     <width>91</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Debug</string>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
