--- a/Extensions/bin/msgviewerdlgui.ui
+++ b/Extensions/bin/msgviewerdlgui.ui
@@ -6,18 +6,71 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>653</width>
-    <height>733</height>
+    <width>659</width>
+    <height>782</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MessageFacility MsgViewer</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">#topFrame {
+border: 4px;
+background: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
+stop: 0 #a6a6a6, stop: 0.08 #7f7f7f,
+stop: 0.39999 #717171, stop: 0.4 #626262,
+stop: 0.9 #4c4c4c, stop: 1 #333333);
+}
+
+#sevFrame {
+border: 4px;
+background: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
+stop: 0 #a6a6a6, stop: 0.08 #7f7f7f,
+stop: 0.39999 #717171, stop: 0.4 #626262,
+stop: 0.9 #4c4c4c, stop: 1 #333333);
+}
+
+#btnError {
+color: rgb(255, 0, 0);
+}
+#btnWarning {
+color: rgb(255, 170, 0);
+}
+#btnInfo {
+color: rgb(0, 170, 0);
+}
+#btnDebug {
+color: rgb(170, 170, 170);
+}
+
+
+/*
+#sevFrame QPushButton {
+color: #333;
+border: 2px solid #555;
+border-radius: 5px;
+padding: 2px;
+background: qradialgradient(cx: 0.3, cy: -0.4,
+fx: 0.3, fy: -0.4,
+radius: 1.35, stop: 0 #fff, stop: 1 #888);
+min-width: 80px;
+}
+#sevFrame QPushButton:hover {
+background: qradialgradient(cx: 0.3, cy: -0.4,
+fx: 0.3, fy: -0.4,
+radius: 1.35, stop: 0 #fff, stop: 1 #bbb);
+}
+#sevFrame QPushButton:pressed {
+background: qradialgradient(cx: 0.4, cy: -0.1,
+fx: 0.4, fy: -0.1,
+radius: 1.35, stop: 0 #fff, stop: 1 #ddd);
+}*/</string>
+  </property>
   <widget class="QPushButton" name="btnPause">
    <property name="geometry">
     <rect>
      <x>530</x>
-     <y>660</y>
+     <y>710</y>
      <width>111</width>
      <height>30</height>
     </rect>
@@ -30,7 +83,7 @@
    <property name="geometry">
     <rect>
      <x>530</x>
-     <y>690</y>
+     <y>740</y>
      <width>111</width>
      <height>30</height>
     </rect>
@@ -46,9 +99,9 @@
    <property name="geometry">
     <rect>
      <x>140</x>
-     <y>29</y>
+     <y>50</y>
      <width>380</width>
-     <height>671</height>
+     <height>721</height>
     </rect>
    </property>
    <property name="font">
@@ -63,24 +116,11 @@
     <bool>true</bool>
    </property>
   </widget>
-  <widget class="QPushButton" name="btnSwitchChannel">
-   <property name="geometry">
-    <rect>
-     <x>380</x>
-     <y>700</y>
-     <width>140</width>
-     <height>27</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Switch</string>
-   </property>
-  </widget>
   <widget class="QLabel" name="label_6">
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>310</y>
+     <y>360</y>
      <width>51</width>
      <height>21</height>
     </rect>
@@ -101,7 +141,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>520</y>
+     <y>570</y>
      <width>111</width>
      <height>21</height>
     </rect>
@@ -122,7 +162,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>100</y>
+     <y>150</y>
      <width>101</width>
      <height>21</height>
     </rect>
@@ -143,7 +183,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>120</y>
+     <y>170</y>
      <width>121</width>
      <height>160</height>
     </rect>
@@ -153,7 +193,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>330</y>
+     <y>380</y>
      <width>121</width>
      <height>160</height>
     </rect>
@@ -163,7 +203,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>540</y>
+     <y>590</y>
      <width>121</width>
      <height>160</height>
     </rect>
@@ -173,7 +213,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>280</y>
+     <y>330</y>
      <width>121</width>
      <height>27</height>
     </rect>
@@ -186,7 +226,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>490</y>
+     <y>540</y>
      <width>121</width>
      <height>27</height>
     </rect>
@@ -199,7 +239,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>700</y>
+     <y>750</y>
      <width>121</width>
      <height>27</height>
     </rect>
@@ -212,7 +252,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>30</y>
+     <y>80</y>
      <width>121</width>
      <height>27</height>
     </rect>
@@ -225,7 +265,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>60</y>
+     <y>110</y>
      <width>121</width>
      <height>27</height>
     </rect>
@@ -238,7 +278,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>10</y>
+     <y>60</y>
      <width>121</width>
      <height>21</height>
     </rect>
@@ -255,79 +295,11 @@
     <string>Message Filter</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_Partition_2">
-   <property name="geometry">
-    <rect>
-     <x>140</x>
-     <y>700</y>
-     <width>161</width>
-     <height>27</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>Sans Serif</family>
-     <pointsize>10</pointsize>
-     <weight>50</weight>
-     <bold>false</bold>
-    </font>
-   </property>
-   <property name="text">
-    <string>Total received messages</string>
-   </property>
-  </widget>
-  <widget class="QLCDNumber" name="lcdMsgs">
-   <property name="geometry">
-    <rect>
-     <x>310</x>
-     <y>700</y>
-     <width>60</width>
-     <height>27</height>
-    </rect>
-   </property>
-   <property name="frameShape">
-    <enum>QFrame::Box</enum>
-   </property>
-   <property name="frameShadow">
-    <enum>QFrame::Raised</enum>
-   </property>
-   <property name="smallDecimalPoint">
-    <bool>false</bool>
-   </property>
-   <property name="segmentStyle">
-    <enum>QLCDNumber::Flat</enum>
-   </property>
-  </widget>
-  <widget class="QSlider" name="vsSeverity">
-   <property name="geometry">
-    <rect>
-     <x>540</x>
-     <y>30</y>
-     <width>16</width>
-     <height>141</height>
-    </rect>
-   </property>
-   <property name="sizePolicy">
-    <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-     <horstretch>0</horstretch>
-     <verstretch>0</verstretch>
-    </sizepolicy>
-   </property>
-   <property name="maximum">
-    <number>3</number>
-   </property>
-   <property name="pageStep">
-    <number>1</number>
-   </property>
-   <property name="orientation">
-    <enum>Qt::Vertical</enum>
-   </property>
-  </widget>
   <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
-     <x>570</x>
-     <y>110</y>
+     <x>560</x>
+     <y>520</y>
      <width>31</width>
      <height>21</height>
     </rect>
@@ -383,8 +355,8 @@
   <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
-     <x>570</x>
-     <y>150</y>
+     <x>560</x>
+     <y>560</y>
      <width>51</width>
      <height>21</height>
     </rect>
@@ -440,8 +412,8 @@
   <widget class="QLabel" name="label_5">
    <property name="geometry">
     <rect>
-     <x>570</x>
-     <y>30</y>
+     <x>560</x>
+     <y>440</y>
      <width>41</width>
      <height>21</height>
     </rect>
@@ -524,8 +496,8 @@
   <widget class="QLabel" name="label_4">
    <property name="geometry">
     <rect>
-     <x>570</x>
-     <y>70</y>
+     <x>560</x>
+     <y>480</y>
      <width>71</width>
      <height>21</height>
     </rect>
@@ -582,7 +554,7 @@
    <property name="geometry">
     <rect>
      <x>530</x>
-     <y>620</y>
+     <y>670</y>
      <width>111</width>
      <height>27</height>
     </rect>
@@ -606,18 +578,332 @@
     <bool>true</bool>
    </property>
   </widget>
-  <widget class="QCommandLinkButton" name="commandLinkButton">
+  <widget class="QFrame" name="sevFrame">
    <property name="geometry">
     <rect>
-     <x>550</x>
-     <y>190</y>
-     <width>91</width>
-     <height>41</height>
+     <x>520</x>
+     <y>70</y>
+     <width>141</width>
+     <height>211</height>
     </rect>
    </property>
-   <property name="text">
-    <string>Debug</string>
+   <property name="styleSheet">
+    <string notr="true"/>
    </property>
+   <property name="frameShape">
+    <enum>QFrame::StyledPanel</enum>
+   </property>
+   <property name="frameShadow">
+    <enum>QFrame::Raised</enum>
+   </property>
+   <widget class="QCommandLinkButton" name="btnError">
+    <property name="geometry">
+     <rect>
+      <x>30</x>
+      <y>30</y>
+      <width>95</width>
+      <height>36</height>
+     </rect>
+    </property>
+    <property name="cursor">
+     <cursorShape>ArrowCursor</cursorShape>
+    </property>
+    <property name="text">
+     <string>Error</string>
+    </property>
+    <property name="checkable">
+     <bool>true</bool>
+    </property>
+    <property name="checked">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QSlider" name="vsSeverity">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>40</y>
+      <width>16</width>
+      <height>141</height>
+     </rect>
+    </property>
+    <property name="sizePolicy">
+     <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+      <horstretch>0</horstretch>
+      <verstretch>0</verstretch>
+     </sizepolicy>
+    </property>
+    <property name="maximum">
+     <number>3</number>
+    </property>
+    <property name="pageStep">
+     <number>1</number>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Vertical</enum>
+    </property>
+   </widget>
+   <widget class="QCommandLinkButton" name="btnWarning">
+    <property name="geometry">
+     <rect>
+      <x>30</x>
+      <y>70</y>
+      <width>95</width>
+      <height>36</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Warning</string>
+    </property>
+   </widget>
+   <widget class="QCommandLinkButton" name="btnInfo">
+    <property name="geometry">
+     <rect>
+      <x>30</x>
+      <y>110</y>
+      <width>95</width>
+      <height>36</height>
+     </rect>
+    </property>
+    <property name="cursor">
+     <cursorShape>ArrowCursor</cursorShape>
+    </property>
+    <property name="text">
+     <string>Info</string>
+    </property>
+    <property name="checkable">
+     <bool>true</bool>
+    </property>
+    <property name="checked">
+     <bool>false</bool>
+    </property>
+   </widget>
+   <widget class="QCommandLinkButton" name="btnDebug">
+    <property name="geometry">
+     <rect>
+      <x>30</x>
+      <y>150</y>
+      <width>95</width>
+      <height>36</height>
+     </rect>
+    </property>
+    <property name="cursor">
+     <cursorShape>ArrowCursor</cursorShape>
+    </property>
+    <property name="text">
+     <string>Debug</string>
+    </property>
+    <property name="checkable">
+     <bool>true</bool>
+    </property>
+    <property name="checked">
+     <bool>false</bool>
+    </property>
+   </widget>
+  </widget>
+  <widget class="QFrame" name="topFrame">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>661</width>
+     <height>45</height>
+    </rect>
+   </property>
+   <property name="frameShape">
+    <enum>QFrame::StyledPanel</enum>
+   </property>
+   <property name="frameShadow">
+    <enum>QFrame::Raised</enum>
+   </property>
+   <widget class="QLabel" name="label_Partition_2">
+    <property name="geometry">
+     <rect>
+      <x>250</x>
+      <y>10</y>
+      <width>181</width>
+      <height>27</height>
+     </rect>
+    </property>
+    <property name="palette">
+     <palette>
+      <active>
+       <colorrole role="WindowText">
+        <brush brushstyle="SolidPattern">
+         <color alpha="255">
+          <red>255</red>
+          <green>255</green>
+          <blue>255</blue>
+         </color>
+        </brush>
+       </colorrole>
+      </active>
+      <inactive>
+       <colorrole role="WindowText">
+        <brush brushstyle="SolidPattern">
+         <color alpha="255">
+          <red>255</red>
+          <green>255</green>
+          <blue>255</blue>
+         </color>
+        </brush>
+       </colorrole>
+      </inactive>
+      <disabled>
+       <colorrole role="WindowText">
+        <brush brushstyle="SolidPattern">
+         <color alpha="255">
+          <red>133</red>
+          <green>131</green>
+          <blue>127</blue>
+         </color>
+        </brush>
+       </colorrole>
+      </disabled>
+     </palette>
+    </property>
+    <property name="font">
+     <font>
+      <family>Sans Serif</family>
+      <pointsize>10</pointsize>
+      <weight>50</weight>
+      <bold>false</bold>
+     </font>
+    </property>
+    <property name="text">
+     <string>Total received messages</string>
+    </property>
+   </widget>
+   <widget class="QLCDNumber" name="lcdMsgs">
+    <property name="geometry">
+     <rect>
+      <x>440</x>
+      <y>10</y>
+      <width>60</width>
+      <height>27</height>
+     </rect>
+    </property>
+    <property name="palette">
+     <palette>
+      <active>
+       <colorrole role="WindowText">
+        <brush brushstyle="SolidPattern">
+         <color alpha="255">
+          <red>0</red>
+          <green>204</green>
+          <blue>0</blue>
+         </color>
+        </brush>
+       </colorrole>
+      </active>
+      <inactive>
+       <colorrole role="WindowText">
+        <brush brushstyle="SolidPattern">
+         <color alpha="255">
+          <red>0</red>
+          <green>204</green>
+          <blue>0</blue>
+         </color>
+        </brush>
+       </colorrole>
+      </inactive>
+      <disabled>
+       <colorrole role="WindowText">
+        <brush brushstyle="SolidPattern">
+         <color alpha="255">
+          <red>133</red>
+          <green>131</green>
+          <blue>127</blue>
+         </color>
+        </brush>
+       </colorrole>
+      </disabled>
+     </palette>
+    </property>
+    <property name="frameShape">
+     <enum>QFrame::Box</enum>
+    </property>
+    <property name="frameShadow">
+     <enum>QFrame::Raised</enum>
+    </property>
+    <property name="smallDecimalPoint">
+     <bool>false</bool>
+    </property>
+    <property name="segmentStyle">
+     <enum>QLCDNumber::Flat</enum>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btnSwitchChannel">
+    <property name="geometry">
+     <rect>
+      <x>510</x>
+      <y>10</y>
+      <width>140</width>
+      <height>27</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Switch</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_Partition_3">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>10</y>
+      <width>211</width>
+      <height>27</height>
+     </rect>
+    </property>
+    <property name="palette">
+     <palette>
+      <active>
+       <colorrole role="WindowText">
+        <brush brushstyle="SolidPattern">
+         <color alpha="255">
+          <red>255</red>
+          <green>255</green>
+          <blue>255</blue>
+         </color>
+        </brush>
+       </colorrole>
+      </active>
+      <inactive>
+       <colorrole role="WindowText">
+        <brush brushstyle="SolidPattern">
+         <color alpha="255">
+          <red>255</red>
+          <green>255</green>
+          <blue>255</blue>
+         </color>
+        </brush>
+       </colorrole>
+      </inactive>
+      <disabled>
+       <colorrole role="WindowText">
+        <brush brushstyle="SolidPattern">
+         <color alpha="255">
+          <red>133</red>
+          <green>131</green>
+          <blue>127</blue>
+         </color>
+        </brush>
+       </colorrole>
+      </disabled>
+     </palette>
+    </property>
+    <property name="font">
+     <font>
+      <family>Sans Serif</family>
+      <pointsize>11</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="text">
+     <string>NOvA Message Viewer</string>
+    </property>
+   </widget>
   </widget>
  </widget>
  <resources/>
